<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

<data>
        <import type="android.view.View"/>
         <import type="com.emi.newsfeeding.R"/>
        <variable name="newsModel" type="com.emi.newsfeeding.PresentViewModel"/>
    </data>


<androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        bind:cardElevation="2dp"
        android:onClick="@{newsModel::onClick}"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:foreground="?attr/selectableItemBackground">



        <RelativeLayout android:id="@+id/image_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

          <ImageView android:id="@+id/thumbnail"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/imageHeight"
                   android:scaleType="centerCrop"
                   android:contentDescription="@string/thumbnail"
                   android:transitionName="@string/viewTrans"
                   bind:srcCompat="@{newsModel.thumbnail}"/>

            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shadowlikes"
                             android:layout_alignTop="@+id/thumbnail">


                <ImageView
                        android:id="@+id/likeImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:tint="@color/colorgrey"
                        android:src="@drawable/ic_favorite_black_24dp">

                </ImageView>

                <TextView
                        android:id="@+id/like_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(safeUnbox(newsModel.likes()))}"
                        android:layout_toLeftOf="@+id/likeImage"
                        android:textSize="15sp"
                        android:layout_marginTop="6dp"
                        tools:text="@string/likes_count_"
                        android:textColor="@color/white"/>


            </RelativeLayout>


        <RelativeLayout android:id="@+id/title_placeholder"
                        android:layout_alignBottom="@+id/thumbnail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow"
                        android:transitionName="@string/experimental">

        <TextView android:id="@+id/title"
                 android:layout_width="match_parent"
                  android:layout_height="@dimen/title"
                  android:text="@{newsModel.title}"
                  android:layout_margin="@dimen/margins"
                  android:textStyle="bold"
                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                  android:textColor="@color/white"
                  android:transitionName="@string/viewTrans"
                  tools:text="@string/title"
                  android:gravity="center"/>


        </RelativeLayout>

        <RelativeLayout android:id="@+id/desc_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_placeholder">

        <TextView android:id="@+id/desc"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ellipsize="end"
                  android:singleLine="true"
                  android:text="@{newsModel.desc}"
                  android:textSize="@dimen/desc_text"
                  android:gravity="center"
                  tools:text="@string/desc"
                  android:textColor="@color/dark_gray"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:layout_marginRight="@dimen/activity_vertical_margin"
                  android:layout_marginLeft="@dimen/activity_vertical_margin"/>

        </RelativeLayout>


        <RelativeLayout android:id="@+id/share_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/desc_placeholder">



                <ImageButton
                        android:id="@+id/btnLike"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@android:color/transparent"
                        android:onClick="@{() -> newsModel.onLiked()}"
                        android:src="@drawable/ic_thumb_up_black_24dp"
                        android:tint="@color/text_like_counter"/>



            <ImageButton android:id="@+id/share_button"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="@dimen/sizes_share"
                     android:layout_height="@dimen/sizes_share"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:clickable="true"
                      android:focusable="true"
                     android:layout_marginRight="@dimen/activity_vertical_margin"
                     android:onClick="@{() -> newsModel.SharedActionProvider()}"
                     android:src="@drawable/ic_share_black_24dp"
                     android:tint="@color/share_matte"/>


        <ImageButton
                android:id="@+id/favorite_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/sizes_share"
                android:layout_height="@dimen/sizes_share"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_toLeftOf="@id/share_button"
                android:src="@drawable/ic_chat_bubble_outline_black_24dp"
                android:tint="@color/text_like_counter"/>

        </RelativeLayout>



    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>