<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="detailViewModel" type="com.emi.newsfeeding.DetailViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:scrollbars="vertical">
    <LinearLayout
            android:id="@+id/detaillayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailActivity">
        <include layout="@layout/detail_toolbar"/>



    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">

        <ImageView android:id="@+id/placeImage"
                   android:layout_width="match_parent"
                   android:layout_height="220dp"
                   bind:srcCompat="@{detailViewModel.thumbnail()}"
                   android:scaleType="centerCrop"
                   android:transitionName="@string/viewTrans"/>

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom">

            <TextView android:id="@+id/date"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="20dp"
                      android:textAlignment="viewEnd"
                      android:textColor="@color/white"
                      android:text="@{detailViewModel.published()}"
                      tools:text="01/20/2020"/>
        </RelativeLayout>

    </FrameLayout>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/title_placeholder"
                      android:layout_width="match_parent"
                      android:layout_height="60dp"
                      android:background="@color/colorgrey"
                      android:transitionName="tNameHolder">


            <TextView android:id="@+id/placeTitle"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center_vertical"
                      android:paddingEnd="10dp"
                      android:paddingStart="10dp"
                      android:text="@{detailViewModel.title()}"
                      android:textAppearance="?android:attr/textAppearanceLarge"
                      android:textColor="@android:color/white"/>
        </LinearLayout>

    </FrameLayout>

    <RelativeLayout android:id="@+id/description_placeholder"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"
                    android:layout_height="300dp">


        <TextView android:id="@+id/desc"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="15dp"
                  android:text="@{detailViewModel.desc()}"
                  android:ellipsize="end"
                  tools:text="@string/template"
                  android:maxLines="2"
                  android:textColor="@color/white"
                  android:textAppearance="@style/TextAppearance.AppCompat.Title"
                  android:textAlignment="center"
                  android:textStyle="italic"
        />


        <TextView android:id="@+id/content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/desc"
                  android:layout_margin="15dp"
                  android:text="@{detailViewModel.content()}"
                  tools:text="@string/templates"
                  android:maxLines="5"
                  android:textSize="15sp"
                  android:ellipsize="end"
                  android:textColor="@color/white"
                  android:textAppearance="@style/TextAppearance.AppCompat.Title"
                  android:textAlignment="center"
                  android:textStyle="italic"
        />

    </RelativeLayout>





    <RelativeLayout android:id="@+id/article_layout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <Button android:id="@+id/readmoreButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:onClick="@{() -> detailViewModel.onReadMore()}"
                android:backgroundTint="@color/white"
                android:elevation="1.5dp"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:text="Read the full article"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</layout>